--- a/SelfOrganizingNetwork.ipynb
+++ b/SelfOrganizingNetwork.ipynb
@@ -3685,7 +3685,7 @@
         "send_critical_cells_email(\n",
         "    df=df,\n",
         "    sender_email=\"harshthakur.0234@gmail.com\",\n",
-        "    app_password=\"icnd aezf bhzt ihhq\"\n",
+        "    app_password=\"enter your passkey here\"\n",
         ")\n"
       ],
       "metadata": {
