--- a/SelfOrganizingNetwork.ipynb
+++ b/SelfOrganizingNetwork.ipynb
@@ -3684,8 +3684,8 @@
         "# @title\n",
         "send_critical_cells_email(\n",
         "    df=df,\n",
-        "    sender_email=\"harshthakur.0234@gmail.com\",\n",
-        "    app_password=\"enter your passkey here\"\n",
+        "    sender_email=\"ENTER YOUR EMAIL HERE\",\n",
+        "    app_password=\"ENTER YOUR PASSKEY HERE\"\n",
         ")\n"
       ],
       "metadata": {
